
	* ipmi-fru/: Audit and fix, no need to memset buffers, remove +1s
	length on buffers.

	* ipmi-sensors/: Audit and fix, remove unnecessary memset.

	* ipmiconsole/: Audit and remove unnecessary memsets.

	* ipmiseld/: Audit and remove unnecessary memsets, add +1 to
	string buffers.

	* ipmipower/: Audit, remove unnecessary memsets, add +1 to string
	buffers, minor cleanup.

2016-10-03 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
	
2016-08-29 Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Add Gigabyte get/set-bmc-services commands.

2016-10-03 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan-conf-security-keys-section.c (k_g_checkout),
	ipmipower/ipmipower_prompt.c (_cmd_k_g): Fix memset of buffer to
	correct length.

	* ipmi-fru/ipmi-fru-output.c (ipmi_fru_output_chassis_info_area,
	ipmi_fru_output_board_info_area, ipmi_fru_output_product_info_area): 
	Remove unnecessary memsets, are performed within API functions.

	* ipmi-oem/ipmi-oem-dell.c (_ipmi_oem_dell_power_supply_info_sdr_callback):
	Memset sensor name buffer before calling
	ipmi_sdr_parse_entity_sensor_name.

	* libfreeipmi/sdr/ipmi-sdr-parse-util.c (ipmi_sdr_parse_sensor_name)
	(ipmi_sdr_parse_entity_sensor_name): No need to memset buf from
	user.

2016-09-30 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c: Put index into fiid_field_data so does
	not have to be calculated later.

	* libfreeipmi/fiid/fiid.c: Put start & end bytes into
	fiid_field_data so does not have to be calculated later.

	* libfreeipmi/fiid/fiid.c: Put internal hash/lookup table to
	remove constant iteration/loops looking for indexes, field
	lengths, and start & end points.

2016-09-30 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fiid/fiid.c (_fiid_template_check_valid_keys):
	Remove expensive check in production builds.  The fall out by not
	checking will be "key not found" errors on fiid_obj_get and
	similar.
