@@ -28,6 +28,9 @@
 	* ipmipower/: Audit, remove unnecessary memsets, add +1 to string
 	buffers, minor cleanup.
 
+	* libipmimonitoring/: Audit, remove unnecessary memsets, add +1 to
+	string buffers.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
